[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/ant.png" type="Texture" id=1]
[ext_resource path="res://characters/HealthManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://characters/Alien.gd" type="Script" id=4]
[ext_resource path="res://characters/HealthBar.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "die"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 3, -1 ), Vector2( 1, 4 ), Vector2( 1, 6 ), Vector2( 2, 7 ), Vector2( 3, 7 ), Vector2( 4, 7 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -5, 2 ), Vector2( -5, 3 ), Vector2( -4, 5 ), Vector2( -5, 3 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "run"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 116, 117, 118, 119, 120, 121, 122, 123, 124, 125 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -2, -4 ), Vector2( -2, 1 ), Vector2( 1, 0 ), Vector2( -1, -1 ), Vector2( 0, -2 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 14.0

[sub_resource type="CircleShape2D" id=6]
radius = 1000.0

[sub_resource type="CircleShape2D" id=7]
radius = 42.107

[sub_resource type="CircleShape2D" id=8]
radius = 73.0274

[node name="Alien" type="KinematicBody2D" groups=[
"aliens",
]]
collision_layer = 130
collision_mask = 65
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2, -4 )
texture = ExtResource( 1 )
vframes = 11
hframes = 13
frame = 116

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/die = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/run = SubResource( 4 )

[node name="HealthManager" parent="." instance=ExtResource( 2 )]
max_health = 30

[node name="HitBox" parent="." instance=ExtResource( 3 )]
position = Vector2( -1, -3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 4, 3 )
shape = SubResource( 5 )

[node name="HealthBar" parent="." instance=ExtResource( 5 )]
margin_left = -16.0
margin_top = -19.0
margin_right = 21.0
margin_bottom = -17.0

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 320

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
visible = false
shape = SubResource( 6 )

[node name="AlienRepeller" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="AlienRepeller"]
shape = SubResource( 7 )

[node name="AlienAttractor" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="AlienAttractor"]
shape = SubResource( 8 )

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true
